Add existing project files to Git

--- a/glassdoor_main.ipynb
+++ b/glassdoor_main.ipynb
@@ -1464,8 +1464,10 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "4b11bf14",
-   "metadata": {},
+   "id": "e837cf73",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1618,8 +1620,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "id": "ce59e8b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('cleaned_data',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9c2557eb",
+   "id": "f11368c4",
    "metadata": {},
    "outputs": [],
    "source": []
